[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["hyejin lee <genie4cs@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = ["console"]

[dependencies.cursive]
git = "https://github.com/geniecs/cursive.git"
default-features = false
features = ["wasm-backend"]

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

[profile.release]
opt-level = "s"
